ctckplatform-solution/haproxy-ingress/demo/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqlcluster
  labels:
    app: mysqlcluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysqlcluster
  template:
    metadata:
      labels:
        app: mysqlcluster
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
