ctckplatform-solution/haproxy-ingress/demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.io/ingress.class: "rp1"   
  labels:
    app: mysqlcluster
  name: mysqlcluster
  namespace: default
spec:
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysqlcluster
  type: ClusterIP
