ctckplatform-solution/haproxy-ingress/demo/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mysqlcluster
spec:
  backend:
    serviceName: mysqlcluster
    servicePort: 3306
